--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<br>
-hello every one...
-<a herf="http://www.baidu.com/">百度</a>
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>a标签测试</title>
+    <meta charset="utf-8">
+</head>
+<body>
+    <a href="index.html">指向本网站中的一个html页面</a>
+    <br>
+    <a href="http://www.baidu.com/">指向其他网站中的一个页面</a>
+</body>
+</html>
